--- a/sample-command/pom.xml
+++ b/sample-command/pom.xml
@@ -3,11 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.nierbeck.apachecon</groupId>
-		<artifactId>karaf-enterprise-sample</artifactId>
+		<artifactId>enterprise-sample-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../enterprise-sample-parent</relativePath>
 	</parent>
 	<artifactId>sample-command</artifactId>
-	<name>Enterprise Sample command</name>
+	<packaging>bundle</packaging>
+	<name>Enterprise Sample : Command</name>
 	<description>This module contains commands to use with persistence</description>
 
 	<dependencies>
@@ -53,5 +55,31 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.5.2</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Import-Package>
+							org.apache.aries.blueprint,
+							org.osgi.service.blueprint.container,
+							org.osgi.service.blueprint.reflect,
+							org.apache.felix.service.command,
+							org.apache.karaf.shell.commands,
+							org.apache.karaf.shell.console,
+							*</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
