--- a/sample-persistence/pom.xml
+++ b/sample-persistence/pom.xml
@@ -5,10 +5,12 @@
 		<groupId>de.nierbeck.apachecon</groupId>
 		<artifactId>enterprise-sample-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../enterprise-sample-parent/</relativePath>
 	</parent>
 	<artifactId>sample-persistence</artifactId>
+	<packaging>bundle</packaging>
 	<name>Enterprise Sample : Persistence</name>
-	<description>This module does contain the required persitence</description>
+	<description>This module does contain the required persistence</description>
 
 	<dependencies>
 		<!-- OpenJPA Dependencies -->
@@ -48,4 +50,60 @@
 			<artifactId>org.apache.servicemix.bundles.asm</artifactId>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>openjpa-maven-plugin</artifactId>
+				<configuration>
+					<addDefaultConstructor>true</addDefaultConstructor>
+					<includes>**/*.class</includes>
+					<enforcePropertyRestriction>true</enforcePropertyRestriction>
+				</configuration>
+				<executions>
+					<execution>
+						<id>enhancer</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>enhance</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.openjpa</groupId>
+						<artifactId>openjpa</artifactId>
+						<version>${dependency.openjpa.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+						<version>${dependency.slf4j.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>${dependency.h2.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.5.2</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>
+						<Export-Package>
+							de.nierbeck.apachecon.persistence.api, 
+							de.nierbeck.apachecon.persistence.entity
+						</Export-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
